--- a/Hippo/FuguUnique.storyboard
+++ b/Hippo/FuguUnique.storyboard
@@ -2439,6 +2439,138 @@
             </objects>
             <point key="canvasLocation" x="1461.5999999999999" y="2486.8065967016491"/>
         </scene>
+        <!--Preview View Controller-->
+        <scene sceneID="vof-3a-E5Y">
+            <objects>
+                <viewController storyboardIdentifier="PreviewViewController" id="aDd-O8-atp" customClass="PreviewViewController" customModule="Hippo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="WpR-Xo-jxK"/>
+                        <viewControllerLayoutGuide type="bottom" id="bhb-SF-JcQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xIg-rP-3a7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5cg-ZJ-e6u" customClass="NavigationBar" customModule="Hippo" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="OKb-ak-jyh"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6n8-BJ-oIv">
+                                <rect key="frame" x="326.5" y="2" width="48.5" height="46.5"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="contentEdgeInsets" minX="12" minY="12" maxX="12" maxY="12"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="crop" catalog="system"/>
+                                <connections>
+                                    <action selector="btnEditTapped:" destination="aDd-O8-atp" eventType="touchUpInside" id="v3b-ua-QcN"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dxr-gj-ynE">
+                                <rect key="frame" x="0.0" y="50" width="375" height="547"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yrj-dE-6VU">
+                                <rect key="frame" x="0.0" y="617" width="375" height="50"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jVe-la-D5o">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                        <subviews>
+                                            <textView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="MbD-s7-Rsu">
+                                                <rect key="frame" x="0.0" y="0.0" width="0.0" height="50"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="1I2-fx-JIZ"/>
+                                                </constraints>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" enablesReturnKeyAutomatically="YES"/>
+                                            </textView>
+                                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Send a message..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jgu-gl-9vx">
+                                                <rect key="frame" x="0.0" y="0.0" width="0.0" height="50"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                                <color key="textColor" red="0.28627450980000002" green="0.28627450980000002" blue="0.28627450980000002" alpha="0.5" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EAh-J0-ZtS">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o12-bC-hXo">
+                                                        <rect key="frame" x="20" y="0.0" width="335" height="50"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                        <state key="normal" title="Send">
+                                                            <color key="titleColor" red="0.12941176469999999" green="0.58823529409999997" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                        </state>
+                                                        <buttonConfiguration key="configuration" style="gray" title="Send">
+                                                            <fontDescription key="titleFontDescription" type="system" pointSize="15"/>
+                                                            <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        </buttonConfiguration>
+                                                        <connections>
+                                                            <action selector="action_SendBtn" destination="aDd-O8-atp" eventType="touchUpInside" id="K1I-qr-Gpz"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstItem="o12-bC-hXo" firstAttribute="top" secondItem="EAh-J0-ZtS" secondAttribute="top" id="DGb-w2-mkE"/>
+                                                    <constraint firstAttribute="bottom" secondItem="o12-bC-hXo" secondAttribute="bottom" id="DyZ-il-4Bc"/>
+                                                    <constraint firstItem="o12-bC-hXo" firstAttribute="leading" secondItem="EAh-J0-ZtS" secondAttribute="leading" constant="20" id="ETD-9m-EBD"/>
+                                                    <constraint firstAttribute="trailing" secondItem="o12-bC-hXo" secondAttribute="trailing" constant="20" id="EVX-rJ-LBS"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.90196078430000004" green="0.90980392160000001" blue="0.91372549020000005" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="jVe-la-D5o" secondAttribute="trailing" id="WKU-HC-VjE"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="150" id="dhc-rD-1DB"/>
+                                    <constraint firstItem="jVe-la-D5o" firstAttribute="top" secondItem="Yrj-dE-6VU" secondAttribute="top" id="hbS-08-olx"/>
+                                    <constraint firstItem="jVe-la-D5o" firstAttribute="leading" secondItem="Yrj-dE-6VU" secondAttribute="leading" id="hjs-eU-Neb"/>
+                                    <constraint firstAttribute="bottom" secondItem="jVe-la-D5o" secondAttribute="bottom" id="jn9-7b-Cik"/>
+                                </constraints>
+                            </view>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yvi-HG-Xmp">
+                                <rect key="frame" x="32" y="362" width="311" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottomMargin" secondItem="Yrj-dE-6VU" secondAttribute="bottom" id="1gS-0t-b7q"/>
+                            <constraint firstAttribute="trailing" secondItem="5cg-ZJ-e6u" secondAttribute="trailing" id="2HW-VT-KCT"/>
+                            <constraint firstAttribute="trailing" secondItem="Yrj-dE-6VU" secondAttribute="trailing" id="5Bo-L5-3Hx"/>
+                            <constraint firstItem="Yrj-dE-6VU" firstAttribute="top" secondItem="dxr-gj-ynE" secondAttribute="bottom" constant="20" id="D49-cs-XO8"/>
+                            <constraint firstAttribute="trailing" secondItem="dxr-gj-ynE" secondAttribute="trailing" id="Eft-Gr-94f"/>
+                            <constraint firstItem="dxr-gj-ynE" firstAttribute="leading" secondItem="xIg-rP-3a7" secondAttribute="leading" id="GpE-Ui-LjY"/>
+                            <constraint firstItem="5cg-ZJ-e6u" firstAttribute="top" secondItem="WpR-Xo-jxK" secondAttribute="bottom" id="Kig-cH-gtu"/>
+                            <constraint firstItem="Yvi-HG-Xmp" firstAttribute="centerY" secondItem="dxr-gj-ynE" secondAttribute="centerY" multiplier="1.15" id="Qvv-WI-yCA"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Yvi-HG-Xmp" secondAttribute="trailing" constant="16" id="Uas-90-mSV"/>
+                            <constraint firstItem="Yrj-dE-6VU" firstAttribute="leading" secondItem="xIg-rP-3a7" secondAttribute="leading" id="VOg-zC-7EZ"/>
+                            <constraint firstItem="dxr-gj-ynE" firstAttribute="top" secondItem="5cg-ZJ-e6u" secondAttribute="bottom" id="a3L-id-Qt7"/>
+                            <constraint firstItem="6n8-BJ-oIv" firstAttribute="centerY" secondItem="5cg-ZJ-e6u" secondAttribute="centerY" id="crO-HG-h0o"/>
+                            <constraint firstItem="Yvi-HG-Xmp" firstAttribute="leading" secondItem="xIg-rP-3a7" secondAttribute="leadingMargin" constant="16" id="hHE-4f-Pwl"/>
+                            <constraint firstItem="5cg-ZJ-e6u" firstAttribute="leading" secondItem="xIg-rP-3a7" secondAttribute="leading" id="uQD-hx-qAM"/>
+                            <constraint firstItem="6n8-BJ-oIv" firstAttribute="trailing" secondItem="5cg-ZJ-e6u" secondAttribute="trailing" id="y9E-1m-5hj"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="btnEdit" destination="6n8-BJ-oIv" id="Lmv-qr-iEr"/>
+                        <outlet property="imageView_Preview" destination="dxr-gj-ynE" id="C2d-GH-V08"/>
+                        <outlet property="label_Placeholder" destination="jgu-gl-9vx" id="Gnm-LH-52v"/>
+                        <outlet property="lblDocumentName" destination="Yvi-HG-Xmp" id="UfK-1V-njc"/>
+                        <outlet property="textView_PrivateNotes" destination="MbD-s7-Rsu" id="uCG-9N-fdG"/>
+                        <outlet property="viewNavigation" destination="5cg-ZJ-e6u" id="mTh-Qc-c6d"/>
+                        <outlet property="viewText" destination="Yrj-dE-6VU" id="el1-sq-2GT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="d2r-ew-IMb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4994" y="18"/>
+        </scene>
     </scenes>
     <resources>
         <image name="AddFile" width="24" height="24"/>
@@ -2447,7 +2579,8 @@
         <image name="cancel_icon" width="16" height="16"/>
         <image name="chat" width="20" height="21"/>
         <image name="close_conversation_icon" width="32" height="32"/>
-        <image name="doc.on.doc" catalog="system" width="116" height="128"/>
+        <image name="crop" catalog="system" width="128" height="116"/>
+        <image name="doc.on.doc" catalog="system" width="32" height="32"/>
         <image name="download_white" width="21" height="21"/>
         <image name="makePayment" width="45" height="45"/>
         <image name="mic" width="36" height="36"/>
