--- a/Hippo/InternalClasses/Views/BotTableView/BotTableView.xib
+++ b/Hippo/InternalClasses/Views/BotTableView/BotTableView.xib
@@ -1,90 +1,115 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="BotTableView" customModule="Hippo" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="SeE-Zy-FC1" customClass="BotTableView" customModule="Hippo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SZb-i9-bLW">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lpS-CF-bKM">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
-                <pickerView clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zCg-h9-P12">
-                    <rect key="frame" x="0.0" y="517" width="375" height="150"/>
-                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="150" id="QbX-x9-LVC"/>
-                    </constraints>
-                </pickerView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kAh-2Q-7G6">
-                    <rect key="frame" x="0.0" y="482" width="375" height="35"/>
+                <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="aha-tp-bRo">
+                    <rect key="frame" x="0.0" y="400" width="375" height="51"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <textInputTraits key="textInputTraits"/>
+                </searchBar>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="x9L-8q-wyM">
+                    <rect key="frame" x="0.0" y="451" width="375" height="216"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </tableView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GPh-D9-O7R">
+                    <rect key="frame" x="0.0" y="365" width="375" height="35"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ftg-n1-Wy7">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="914-Vd-7TI">
                             <rect key="frame" x="0.0" y="0.0" width="80" height="35"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="80" id="1dA-Ht-m6T"/>
+                                <constraint firstAttribute="width" constant="80" id="ODb-BR-3Ld"/>
                             </constraints>
                             <state key="normal" title="Cancel">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                             <connections>
-                                <action selector="cancelButtonClicked:" destination="iN0-l3-epB" eventType="touchUpInside" id="mdA-KP-PXY"/>
+                                <action selector="cancelButtonClicked:" destination="SeE-Zy-FC1" eventType="touchUpInside" id="ZGa-g9-h2A"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L2F-KR-wxY">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b9R-uA-oeF">
                             <rect key="frame" x="295" y="0.0" width="80" height="35"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="80" id="ZCx-Ht-qvD"/>
+                                <constraint firstAttribute="width" constant="80" id="67G-ZR-pgX"/>
                             </constraints>
                             <state key="normal" title="Send">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                             <connections>
-                                <action selector="sendButtonClicked:" destination="iN0-l3-epB" eventType="touchUpInside" id="zmB-FM-aSS"/>
+                                <action selector="sendButtonClicked:" destination="SeE-Zy-FC1" eventType="touchUpInside" id="6Qd-pi-rDs"/>
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="L2F-KR-wxY" secondAttribute="bottom" id="Htr-yM-dTP"/>
-                        <constraint firstItem="Ftg-n1-Wy7" firstAttribute="top" secondItem="kAh-2Q-7G6" secondAttribute="top" id="Uiv-4S-tWm"/>
-                        <constraint firstAttribute="bottom" secondItem="Ftg-n1-Wy7" secondAttribute="bottom" id="VWd-Ay-EPd"/>
-                        <constraint firstAttribute="height" constant="35" id="XNb-zO-lm1"/>
-                        <constraint firstItem="Ftg-n1-Wy7" firstAttribute="leading" secondItem="kAh-2Q-7G6" secondAttribute="leading" id="ePZ-QQ-X3k"/>
-                        <constraint firstItem="L2F-KR-wxY" firstAttribute="top" secondItem="kAh-2Q-7G6" secondAttribute="top" id="iaQ-Uq-f9p"/>
-                        <constraint firstAttribute="trailing" secondItem="L2F-KR-wxY" secondAttribute="trailing" id="mi2-bH-XYA"/>
+                        <constraint firstAttribute="bottom" secondItem="914-Vd-7TI" secondAttribute="bottom" id="DH5-aV-dOV"/>
+                        <constraint firstAttribute="height" constant="35" id="DQw-M3-1Lx"/>
+                        <constraint firstAttribute="trailing" secondItem="b9R-uA-oeF" secondAttribute="trailing" id="Rfh-HA-ffw"/>
+                        <constraint firstItem="914-Vd-7TI" firstAttribute="leading" secondItem="GPh-D9-O7R" secondAttribute="leading" id="WHH-Wh-umh"/>
+                        <constraint firstItem="914-Vd-7TI" firstAttribute="top" secondItem="GPh-D9-O7R" secondAttribute="top" id="YTt-Qc-9qD"/>
+                        <constraint firstItem="b9R-uA-oeF" firstAttribute="top" secondItem="GPh-D9-O7R" secondAttribute="top" id="cYZ-5Z-iDG"/>
+                        <constraint firstAttribute="bottom" secondItem="b9R-uA-oeF" secondAttribute="bottom" id="rJI-6X-SqB"/>
                     </constraints>
                 </view>
+                <pickerView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OMh-3D-1xX">
+                    <rect key="frame" x="0.0" y="451" width="375" height="216"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </pickerView>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No bots found" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="asu-AE-22U">
+                    <rect key="frame" x="134" y="549.5" width="107" height="19.5"/>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
-            <color key="backgroundColor" white="0.0" alpha="0.28136003521126762" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <viewLayoutGuide key="safeArea" id="vRA-Bd-JGQ"/>
+            <color key="backgroundColor" white="0.0" alpha="0.28136003520000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="zCg-h9-P12" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="4yx-qv-TfE"/>
-                <constraint firstItem="zCg-h9-P12" firstAttribute="top" secondItem="kAh-2Q-7G6" secondAttribute="bottom" id="9yi-TT-eXr"/>
-                <constraint firstItem="kAh-2Q-7G6" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Caw-gt-gKv"/>
-                <constraint firstItem="SZb-i9-bLW" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="WJ8-W9-7sg"/>
-                <constraint firstItem="kAh-2Q-7G6" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="YsV-dI-xaT"/>
-                <constraint firstItem="SZb-i9-bLW" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="ikn-OB-JWa"/>
-                <constraint firstItem="zCg-h9-P12" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="jXx-SJ-yZT"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="zCg-h9-P12" secondAttribute="bottom" id="jaH-TA-i8v"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="SZb-i9-bLW" secondAttribute="trailing" id="o1E-ig-nJ7"/>
-                <constraint firstItem="SZb-i9-bLW" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="sBA-qV-gXt"/>
+                <constraint firstItem="asu-AE-22U" firstAttribute="centerX" secondItem="OMh-3D-1xX" secondAttribute="centerX" id="03R-Qs-vpS"/>
+                <constraint firstItem="OMh-3D-1xX" firstAttribute="leading" secondItem="vRA-Bd-JGQ" secondAttribute="leading" id="4p8-W7-CDI"/>
+                <constraint firstItem="asu-AE-22U" firstAttribute="centerY" secondItem="OMh-3D-1xX" secondAttribute="centerY" id="CUQ-5I-C1y"/>
+                <constraint firstItem="lpS-CF-bKM" firstAttribute="top" secondItem="vRA-Bd-JGQ" secondAttribute="top" id="FfI-sF-9H1"/>
+                <constraint firstItem="vRA-Bd-JGQ" firstAttribute="trailing" secondItem="lpS-CF-bKM" secondAttribute="trailing" id="OFd-mW-tTD"/>
+                <constraint firstItem="lpS-CF-bKM" firstAttribute="leading" secondItem="vRA-Bd-JGQ" secondAttribute="leading" id="QaV-wA-QDE"/>
+                <constraint firstItem="GPh-D9-O7R" firstAttribute="trailing" secondItem="vRA-Bd-JGQ" secondAttribute="trailing" id="UfB-ot-1X9"/>
+                <constraint firstItem="x9L-8q-wyM" firstAttribute="height" secondItem="OMh-3D-1xX" secondAttribute="height" id="YE7-xD-qh2"/>
+                <constraint firstItem="aha-tp-bRo" firstAttribute="leading" secondItem="GPh-D9-O7R" secondAttribute="leading" id="Yx2-Qy-r2w"/>
+                <constraint firstItem="OMh-3D-1xX" firstAttribute="bottom" secondItem="vRA-Bd-JGQ" secondAttribute="bottom" id="ZRR-Lf-PEc"/>
+                <constraint firstItem="x9L-8q-wyM" firstAttribute="centerY" secondItem="OMh-3D-1xX" secondAttribute="centerY" id="fwa-fK-JqT"/>
+                <constraint firstItem="x9L-8q-wyM" firstAttribute="width" secondItem="OMh-3D-1xX" secondAttribute="width" id="gee-fd-Uoq"/>
+                <constraint firstItem="lpS-CF-bKM" firstAttribute="bottom" secondItem="vRA-Bd-JGQ" secondAttribute="bottom" id="jDB-93-PfG"/>
+                <constraint firstItem="OMh-3D-1xX" firstAttribute="trailing" secondItem="vRA-Bd-JGQ" secondAttribute="trailing" id="kRY-9E-l2P"/>
+                <constraint firstItem="aha-tp-bRo" firstAttribute="trailing" secondItem="GPh-D9-O7R" secondAttribute="trailing" id="krb-LJ-bdV"/>
+                <constraint firstItem="OMh-3D-1xX" firstAttribute="top" secondItem="aha-tp-bRo" secondAttribute="bottom" id="mz1-Yr-vLv"/>
+                <constraint firstItem="x9L-8q-wyM" firstAttribute="centerX" secondItem="OMh-3D-1xX" secondAttribute="centerX" id="oQZ-KI-PIP"/>
+                <constraint firstItem="GPh-D9-O7R" firstAttribute="leading" secondItem="vRA-Bd-JGQ" secondAttribute="leading" id="yTM-oN-qji"/>
+                <constraint firstItem="aha-tp-bRo" firstAttribute="top" secondItem="GPh-D9-O7R" secondAttribute="bottom" id="yWd-Sm-Oty"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
-                <outlet property="cancelButton" destination="Ftg-n1-Wy7" id="KWi-06-iuO"/>
-                <outlet property="dismissView" destination="SZb-i9-bLW" id="cnM-yy-qrr"/>
-                <outlet property="pickerSelectorView" destination="kAh-2Q-7G6" id="jkY-gn-LRr"/>
-                <outlet property="pickerView" destination="zCg-h9-P12" id="GRC-dg-Sa0"/>
-                <outlet property="sendButton" destination="L2F-KR-wxY" id="Hbz-6T-DCQ"/>
+                <outlet property="bottomConst" destination="ZRR-Lf-PEc" id="K1m-KN-8y2"/>
+                <outlet property="cancelButton" destination="914-Vd-7TI" id="ETk-aL-KZ5"/>
+                <outlet property="dismissView" destination="lpS-CF-bKM" id="N9G-WD-ozF"/>
+                <outlet property="lblNoBot" destination="asu-AE-22U" id="6fT-nq-Ug7"/>
+                <outlet property="pickerSelectorView" destination="GPh-D9-O7R" id="f6B-0O-CK9"/>
+                <outlet property="pickerView" destination="OMh-3D-1xX" id="ww9-v3-jJP"/>
+                <outlet property="searchBar" destination="aha-tp-bRo" id="Qpg-Is-Ogs"/>
+                <outlet property="sendButton" destination="b9R-uA-oeF" id="BiM-1P-3Es"/>
+                <outlet property="tblView" destination="x9L-8q-wyM" id="nF5-9G-Axu"/>
             </connections>
             <point key="canvasLocation" x="35.5" y="31.5"/>
         </view>
